Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15444

Querying I_S.PARAMETERS can crash with a corrupted mysql.proc

    XMLWordPrintable

Details

    Description

      I intentionally break mysql.proc by adding an extra value into the type column, and update type of an existing routine to the new bad value. After this change, a query to I_S.PARAMETERS crashes the server.

      CREATE OR REPLACE FUNCTION f1 (a INT) RETURNS INT RETURN 10;
      ALTER TABLE mysql.proc MODIFY type enum('FUNCTION','PROCEDURE','PACKAGE','PACKAGE BODY','XXX');
      UPDATE mysql.proc SET type='XXX' WHERE name='f1';
      SELECT * FROM INFORMATION_SCHEMA.PARAMETERS;
      

      This problem was introduced by the patch for MDEV-13415.

      Attachments

        Activity

          People

            bar Alexander Barkov
            bar Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.