MDEV-15444 Querying I_S.PARAMETERS can crash with a corrupted mysql.proc